Migrate tracer to mock_uss

--- a/monitoring/mock_uss/templates/tracer/base.html
+++ b/monitoring/mock_uss/templates/tracer/base.html
@@ -5,14 +5,14 @@
   {% if title %}
     <title>{{ title }} - Tracer</title>
   {% else %}
-    <title>Tracer (InterUSS Project)</title>
+    <title>Tracer (InterUSS Platform)</title>
   {% endif %}
 </head>
 <body>
   <div>
     Tracer:
-    <a href="{{ url_for('list_logs') }}">Home</a>
-    <a href="{{ url_for('get_rid_poll') }}">RID Flights</a>
+    <a href="{{ url_for('tracer_list_logs') }}">Home</a>
+    <a href="{{ url_for('tracer_rid_v19_get_rid_poll') }}">RID v19 Flights</a>
   </div>
   <hr>
   <div>
