--- a/monitoring/mock_uss/templates/tracer/log.html
+++ b/monitoring/mock_uss/templates/tracer/log.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "tracer/base.html" %}
 
 {% macro collapseable(v) %}{% if v is mapping or (v is iterable and v is not string) %}collapseable{% else %}not_collapseable{% endif %}{% endmacro %}
 
