--- a/monitoring/mock_uss/templates/tracer/logs.html
+++ b/monitoring/mock_uss/templates/tracer/logs.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "tracer/base.html" %}
 
 {% block content %}
 <ul>
@@ -7,7 +7,7 @@
   </li>
   {% for log in logs %}
     <li>
-      <a href="{{ url_for('logs', log=log) }}">{{ log }}</a>
+      <a href="{{ url_for('tracer_logs', log=log) }}">{{ log }}</a>
       {% if log in kmls %}[<a href="{{ kmls[log] }}">kml</a>]{% endif %}
     </li>
   {% endfor %}
