Implement tracer support for rid v22a

--- a/monitoring/mock_uss/templates/tracer/base.html
+++ b/monitoring/mock_uss/templates/tracer/base.html
@@ -12,7 +12,7 @@
   <div>
     Tracer:
     <a href="{{ url_for('tracer_list_logs') }}">Home</a>
-    <a href="{{ url_for('tracer_rid_v19_get_rid_poll') }}">RID v19 Flights</a>
+    <a href="{{ url_for('tracer_rid_get_poll') }}">RID {{ rid_version }} Flights</a>
   </div>
   <hr>
   <div>
