--- a/monitoring/mock_uss/templates/tracer/rid_poll.html
+++ b/monitoring/mock_uss/templates/tracer/rid_poll.html
@@ -1,7 +1,7 @@
 {% extends "tracer/base.html" %}
 
 {% block content %}
-<form action="{{ url_for('tracer_rid_v19_request_rid_poll') }}" method="POST">
+<form action="{{ url_for('tracer_rid_request_poll') }}" method="POST">
   <p>
     <label for="area">Area (lat,lng,lat,lng):</label>
     <input type="text" id="area" name="area" size="40">
