Rework tracer to use dynamic observation areas

--- a/monitoring/mock_uss/templates/tracer/base.html
+++ b/monitoring/mock_uss/templates/tracer/base.html
@@ -11,8 +11,8 @@
 <body>
   <div>
     Tracer:
-    <a href="{{ url_for('tracer_list_logs') }}">Home</a>
-    <a href="{{ url_for('tracer_rid_get_poll') }}">RID {{ rid_version }} Flights</a>
+    <a href="{{ url_for('tracer_list_logs') }}">Home (logs)</a>
+    <a href="{{ url_for('tracer_observation_areas_ui') }}">Observation Areas</a>
   </div>
   <hr>
   <div>
