Add alternating background CSS

--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
@@ -20,6 +20,9 @@
     tr {
       border-top: 1px solid hsla(210,18%,87%,1);
     }
+    table tr:nth-child(2n) {
+      background-color: #f6f8fa;
+    }
     td {
       padding: 6px 6px;
       vertical-align: top;
