Add sequence view artifact

--- a/monitoring/mock_uss/templates/tracer/log.html
+++ b/monitoring/mock_uss/templates/tracer/log.html
@@ -3,6 +3,6 @@
 
 {% block content %}
   {{ explorer_header() }}
-  {{ explorer_content(log) }}
-  {{ explorer_footer() }}
+  {{ explorer_content("top_node", log) }}
+  {{ explorer_footer(["top_node"]) }}
 {% endblock %}
