--- a/monitoring/uss_qualifier/reports/templates/report.html
+++ b/monitoring/uss_qualifier/reports/templates/report.html
@@ -8,8 +8,8 @@
 <body>
 <div>
     {{ explorer_header() }}
-    {{ explorer_content(report) }}
-    {{ explorer_footer() }}
+    {{ explorer_content("top_node", report) }}
+    {{ explorer_footer(["top_node"]) }}
 </div>
 </body>
 </html>
