Add other participants to tested_requirements summary

--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
@@ -81,6 +81,10 @@
       <td>{{ participant_id }}</td>
     </tr>
     <tr>
+      <td>Other participants</td>
+      <td>{{ other_participants }}</td>
+    </tr>
+    <tr>
       <td>Test run identifier</td>
       <td>TR-{{ test_run.test_run_id[0:7] }}</td>
     </tr>
