Add more information for failed checks

--- a/monitoring/monitorlib/html/templates/explorer.html
+++ b/monitoring/monitorlib/html/templates/explorer.html
@@ -58,7 +58,7 @@
       cursor: pointer;
     }
     .collapsed>.node_key {
-      color: red;
+      color: blue;
     }
     .node_key {
       font-weight: bold;
