--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/test_run_report.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/test_run_report.html
@@ -7,6 +7,8 @@
       <li><a href="./{{ participant_id }}.html">{{ participant_id }}</a></li>
     {% endfor %}
   </ul>
+  <h2>Programmatic verification statuses</h2>
+  <a href="status.json">status.json</a>
 </div>
 </body>
 </html>
