Add log management

--- a/monitoring/mock_uss/templates/tracer/base.html
+++ b/monitoring/mock_uss/templates/tracer/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-    Tracer:
+    Tracer ({{ username }}):
     <a href="{{ url_for('tracer_list_logs') }}">Home (logs)</a>
     <a href="{{ url_for('tracer_observation_areas_ui') }}">Observation Areas</a>
   </div>
