--- a/monitoring/mock_uss/templates/tracer/logs.html
+++ b/monitoring/mock_uss/templates/tracer/logs.html
@@ -12,6 +12,7 @@
     </li>
   {% endfor %}
 </ul>
+{% if is_admin %}
 <p>
   <a href="{{ url_for('tracer_download_logs') }}">Download logs</a>
 </p>
@@ -40,4 +41,5 @@ function clearAllLogs() {
 <p>
   <a href="#" onclick="clearAllLogs()">Clear logs</a>
 </p>
+{% endif %}
 {% endblock %}
