Make sequence view overview header row sticky

--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/participant_tested_requirements.html
@@ -34,6 +34,7 @@
       background-color: rgb(230, 230, 230);
       border: 1px solid #d0d7de;
       height: 40px;
+      box-sizing: border-box;
     }
     a {
       background-color: transparent;
