--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/test_run_report.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/test_run_report.html
@@ -1,12 +1,28 @@
 <html>
+<head>
+  {% include "tested_requirements/style.html" %}
+</head>
 <body>
 <div>
   <h2>Participants</h2>
-  <ul>
+  <table>
+    <tr>
+      <th>Participant</th>
+      <th>Verification status</th>
+      <th>System version</th>
+    </tr>
     {% for participant_id in participant_ids %}
-      <li><a href="./{{ participant_id }}.html">{{ participant_id }}</a></li>
+    <tr>
+      <td><a href="./{{ participant_id }}.html">{{ participant_id }}</a></td>
+      <td class="{{ verification_report.participant_verifications[participant_id].status.get_class() }}">
+        <a href="./{{ participant_id }}.html">{{ verification_report.participant_verifications[participant_id].status.get_text() }}</a>
+      </td>
+      <td>{{ verification_report.participant_verifications[participant_id].system_version or "" }}</td>
+    </tr>
     {% endfor %}
-  </ul>
+  </table>
+</div>
+<div>
   <h2>Programmatic verification statuses</h2>
   <a href="status.json">status.json</a>
 </div>
