--- a/monitoring/uss_qualifier/reports/templates/timing/report.html
+++ b/monitoring/uss_qualifier/reports/templates/timing/report.html
@@ -128,6 +128,7 @@
                 <th>Total time</th>
                 <th>Average time</th>
                 <th>Query time<br>(fraction of scenario)</th>
+                <th>Delay time<br>(fraction of scenario)</th>
             </tr>
             {% for row in scenario_breakdown %}
             <tr>
@@ -137,6 +138,7 @@
                 <td>{{ round(row.query_fraction * 100, 1) }}%
                 {% if row.query_fraction > 1 %} (concurrent queries){% endif %}
                 </td>
+                <td>{{ round(row.delay_fraction * 100, 1) }}%</td>
             </tr>
             {% endfor %}
         </table>
@@ -168,8 +170,23 @@
         </table>
     </div>
     <div>
-        <h2>Intentional delay breakdown</h2>
-        TODO
+        <h2>Breakdown by intentional delay</h2>
+        <table>
+            <tr>
+                <th>Scenario</th>
+                <th>Reason</th>
+                <th>Total time</th>
+                <th>Average time</th>
+            </tr>
+            {% for row in delays_breakdown %}
+            <tr>
+                <td>{{ row.scenario_type }}</td>
+                <td>{{ row.reason }}</td>
+                <td>{{ format_time(row.total_time) }}</td>
+                <td>{{ format_time(row.average_time) }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
 </body>
