Add acceptable_findings to tested_requirements

--- a/monitoring/uss_qualifier/reports/templates/tested_requirements/style.html
+++ b/monitoring/uss_qualifier/reports/templates/tested_requirements/style.html
@@ -58,6 +58,9 @@
     .findings_result {
       background-color: rgb(255, 255, 192);
     }
+    .accepted_findings_result {
+      background-color: rgb(178, 125, 209);
+    }
     .fail_result {
       background-color: rgb(255, 192, 192);
     }
